BUGS Fixed Navbar Central image and Message color

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <div id="page1">
             <nav id="nav1">
                 <a href="#"><img src="me.svg" alt="Home" id="navico"></a>
-                <a href="#page1" class="navtext active" id="a1">About</a>
-                <a href="#page2" class="navtext">Work</a>
-                <a href="#" class="navtext" id="a3">Notes</a>
+                <a href="#page2" class="navtext active" id="a1">About</a>
+                <a href="#notes" class="navtext" id="a3">Notes</a>
+                <a href="#working" class="navtext">Work</a>
             </nav>
-            <!-- <img src="" alt="I'm Sean"> -->
+            <div style="display: flex; justify-content: center;">
+                <img src="./me.svg" alt="I'm Sean">
+            </div>
             <h1 class="Imsean">I'm Sean.</h1>
             <p class="webd">a web designer.</p>
             <div class="cloud1">
@@ -38,7 +40,7 @@
             <img src="me.svg" alt="Home">
             <h2>Hi.</h2>
             <p>I'm a web designer / developer based in Toronto,<br> Canada. I have a passion for web design and love to <br> create for web and mobile devices.</p>
-            <div class="line"><hr></div>
+            <div class="line" id="notes"><hr></div>
             <h1>What I can do.</h1>
             <div class="typo1">
                 <div class="typoimg1">
@@ -64,8 +66,8 @@
             </div>
             <!-- <p>Have to do some typography here IDK how</p> -->
             <div class="line"><hr></div>
-            <h1>I can help.</h1>
-            <h2>I’m currently available for freelance work.</h2>
+            <h1 id="working">I can help.</h1>
+            <h2>I'm currently available for freelance work.</h2>
             <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
             <a href="#"><div class="msgme"><img src="mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
             <div class="line"><hr></div>
