--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- <p>Have to do some typography here IDK how</p> -->
             <div class="line"><hr></div>
             <h1>I can help.</h1>
-            <h2>I’m currently available for freelance work.</h2>
+            <h2>I'm currently available for freelance work.</h2>
             <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
             <a href="#"><div class="msgme"><img src="./Assets/mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
             <div class="line"><hr></div>
