wrap nav tag in header tag , add useful comments

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     </head>
     <body>
         <div id="page1">
+            <!--header-->
+            <header>
             <nav id="nav1">
                 <a href="#"><img src="me.svg" alt="Home" id="navico"></a>
                 <a href="#page1" class="navtext active" id="a1">About</a>
                 <a href="#page2" class="navtext">Work</a>
                 <a href="#" class="navtext" id="a3">Notes</a>
             </nav>
+            </header>
             <!-- <img src="" alt="I'm Sean"> -->
             <h1 class="Imsean">I'm Sean.</h1>
             <p class="webd">a web designer.</p>
@@ -70,6 +73,7 @@
             <a href="#"><div class="msgme"><img src="mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
             <div class="line"><hr></div>
         </div>
+        <!--footer-->
         <footer>
             <div class="links">
                 <a href="#">dribble</a>
