Added image desynchronization by modifying animation logic

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="typoimg1">
                     <img src="me.svg" alt="">
                     <div class="line"><hr></div>
-                    <img src="design-icons-vert.png" alt="" id="bubble">
+                    <img src="design-icons-vert.png" alt="" id="bubble" class="bubble-1">
                 </div>
                 <div class="texttypo">
                     <h2>Design what you want.</h2>
@@ -57,7 +57,7 @@
                     <p>I'm a developer, so I know how to create your <br>website to run across devices using the latest <br>technologies available.</p>
                 </div>
                 <div class="typoimg2">
-                    <img src="dev-icons-vert.png" alt="" id="bubble">
+                    <img src="dev-icons-vert.png" alt="" id="bubble" class="bubble-2">
                     <div class="line"><hr></div>
                     <img src="me-dev.svg" alt="">
                 </div>
