Added dark-light mode default preference with mode toggle button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#page1" class="navtext active" id="a1">About</a>
                 <a href="#page2" class="navtext">Work</a>
                 <a href="#" class="navtext" id="a3">Notes</a>
+                <a href="#" class="navtext" id="mode-toggle"><span>dark</span></a>
             </nav>
             <!-- <img src="" alt="I'm Sean"> -->
             <h1 class="Imsean">I'm Sean.</h1>
