--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             <h1 class="Imsean">I'm Sean.</h1>
             <p class="webd">a web designer.</p>
             <div class="cloud1">
-                <img src="cloud.svg" alt="">
+                <img src="/Assets/cloud.svg" alt="">
             </div>
             <div class="cloud2">
-                <img src="cloud.svg" alt="">
+                <img src="/Assets/cloud.svg" alt="">
             </div>
             <div class="lan">
-                <img src="land.svg" alt="" class="land">
+                <img src="/Assets/land.svg" alt="" class="land">
             </div>
             
         </div>
         <div id="page2">
-            <img src="me.svg" alt="Home">
+            <img src="/Assets/land.svg" alt="Home">
             <h2>Hi.</h2>
             <p>I'm a web designer / developer based in Toronto,<br> Canada. I have a passion for web design and love to <br> create for web and mobile devices.</p>
             <div class="line"><hr></div>
             <h1>What I can do.</h1>
             <div class="typo1">
                 <div class="typoimg1">
-                    <img src="me.svg" alt="">
+                    <img src="/Assets/me.svg" alt="">
                     <div class="line"><hr></div>
-                    <img src="design-icons-vert.png" alt="" id="bubble">
+                    <img src="/Assets/design-icons-vert.png" alt="" id="bubble">
                 </div>
                 <div class="texttypo">
                     <h2>Design what you want.</h2>
@@ -57,9 +57,9 @@
                     <p>I'm a developer, so I know how to create your <br>website to run across devices using the latest <br>technologies available.</p>
                 </div>
                 <div class="typoimg2">
-                    <img src="dev-icons-vert.png" alt="" id="bubble">
+                    <img src="/Assets/dev-icons-vert.png" alt="" id="bubble">
                     <div class="line"><hr></div>
-                    <img src="me-dev.svg" alt="">
+                    <img src="/Assets/me.svg" alt="">
                 </div>
             </div>
             <!-- <p>Have to do some typography here IDK how</p> -->
@@ -67,7 +67,7 @@
             <h1>I can help.</h1>
             <h2>I’m currently available for freelance work.</h2>
             <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
-            <a href="#"><div class="msgme"><img src="mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
+            <a href="#"><div class="msgme"><img src="/Assets/mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
             <div class="line"><hr></div>
         </div>
         <footer>
@@ -78,6 +78,6 @@
             </div>
             <div class="last">© 2018 Sean Halpin. All rights reserved.</div>
         </footer>
-        <script src="index.js"></script>
+        <script src="/Stylesheets/index.js"></script>
     </body>
 </html>
