--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/Stylesheets/index.css">
         <link rel="shortcut icon" href="https://web.archive.org/web/20180819202235js_/http://seanhalpin.io/assets/img/content/home/hello/me.svg" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <body>
         <div id="page1">
             <nav id="nav1">
-                <a href="#"><img src="me.svg" alt="Home" id="navico"></a>
+                <a href="#"><img src="/assets/me.svg" alt="Home" id="navico"></a>
                 <a href="#page1" class="navtext active" id="a1">About</a>
                 <a href="#page2" class="navtext">Work</a>
                 <a href="#" class="navtext" id="a3">Notes</a>
@@ -24,27 +24,27 @@
             <h1 class="Imsean">I'm Sean.</h1>
             <p class="webd">a web designer.</p>
             <div class="cloud1">
-                <img src="/Assets/cloud.svg" alt="">
+                <img src="/assets/cloud.svg" alt="">
             </div>
             <div class="cloud2">
-                <img src="/Assets/cloud.svg" alt="">
+                <img src="/assets/cloud.svg" alt="">
             </div>
             <div class="lan">
-                <img src="/Assets/land.svg" alt="" class="land">
+                <img src="/assets/land.svg" alt="" class="land">
             </div>
             
         </div>
         <div id="page2">
-            <img src="/Assets/land.svg" alt="Home">
+            <img src="/assets/land.svg" alt="Home">
             <h2>Hi.</h2>
             <p>I'm a web designer / developer based in Toronto,<br> Canada. I have a passion for web design and love to <br> create for web and mobile devices.</p>
             <div class="line"><hr></div>
             <h1>What I can do.</h1>
             <div class="typo1">
                 <div class="typoimg1">
-                    <img src="/Assets/me.svg" alt="">
+                    <img src="/assets/me.svg" alt="">
                     <div class="line"><hr></div>
-                    <img src="/Assets/design-icons-vert.png" alt="" id="bubble">
+                    <img src="/assets/design-icons-vert.png" alt="" id="bubble">
                 </div>
                 <div class="texttypo">
                     <h2>Design what you want.</h2>
@@ -57,9 +57,9 @@
                     <p>I'm a developer, so I know how to create your <br>website to run across devices using the latest <br>technologies available.</p>
                 </div>
                 <div class="typoimg2">
-                    <img src="/Assets/dev-icons-vert.png" alt="" id="bubble">
+                    <img src="/assets/dev-icons-vert.png" alt="" id="bubble">
                     <div class="line"><hr></div>
-                    <img src="/Assets/me.svg" alt="">
+                    <img src="/assets/me.svg" alt="">
                 </div>
             </div>
             <!-- <p>Have to do some typography here IDK how</p> -->
@@ -67,7 +67,7 @@
             <h1>I can help.</h1>
             <h2>I’m currently available for freelance work.</h2>
             <p>If you have a project that you want to get started, think you need my help <br> with something or just fancy saying hey, then get in touch.</p>
-            <a href="#"><div class="msgme"><img src="/Assets/mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
+            <a href="#"><div class="msgme"><img src="/assets/mail.png" alt="Mail"><p>MESSAGE ME</p></div></a>
             <div class="line"><hr></div>
         </div>
         <footer>
@@ -78,6 +78,6 @@
             </div>
             <div class="last">© 2018 Sean Halpin. All rights reserved.</div>
         </footer>
-        <script src="/Stylesheets/index.js"></script>
+        <script src="/Scripts/index.js"></script>
     </body>
 </html>
